fix: align input fields

--- a/src/components/edit/styles/LayerDialog.module.css
+++ b/src/components/edit/styles/LayerDialog.module.css
@@ -123,7 +123,7 @@
 }
 
 .narrowFieldIcon {
-    width: 124px;
+    width: 128px;
 }
 
 /* Earth Engine */
